--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,12 +64,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-//    //Jetpack Navigation
-//    val nav_version = "2.3.5"
-//    // Kotlin
-//    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
-//    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
-    // Jetpack Compose Integration
+    // Jetpack Compose Navigation
     implementation("androidx.navigation:navigation-compose:2.4.0-beta02")
 }
