--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.COVID19">
         <activity
-            android:name=".MainActivity"
+            android:name="ru.kinesis.covid_19.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.COVID19.NoActionBar">
